[package]
name = "ankro"
version = "0.0.0"
edition = "2024"
license = "WTFNMFPL"
description = "Gatekeeper For Your Web App"
[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
mimalloc = { version = "0.1.52", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"


[profile.release]
opt-level = 3        
lto = "fat"              
codegen-units = 1       
panic = "abort"         
incremental = false       
overflow-checks = false   

[profile.release-small]
inherits = "release"
strip = true        
opt-level = "z"     
lto = true    
codegen-units = 1    
panic = "abort"     
