[package]
name = "ankro"
version = "0.0.7"
edition = "2024"
license = "WTFNMFPL"
description = "Gatekeeper For Your Web App"
repository = "https://github.com/Synth1105/ankro"
homepage = "https://github.com/Synth1105/ankro"
[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
mimalloc = { version = "0.1.52", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde", "serde_json"] }


[profile.release]
opt-level = 3        
lto = "fat"              
codegen-units = 1       
panic = "abort"         
incremental = false       
overflow-checks = false   

[profile.release-small]
inherits = "release"
strip = true        
opt-level = "z"     
lto = true    
codegen-units = 1    
panic = "abort"     
